Release ...
* The "getconf" utility has been added (derived from OpenSolaris code).

Release 050713
* The 'echo' and 'test' commands have been added as standalone versions of
  those of the Heirloom Bourne shell.
* The 'false', 'kill', 'printf', 'pwd', and 'true' commands have been added.
* ed: Copying a larger number of lines with the 't' command could cause a
  segmentation fault because some pointers were not updated after calling
  realloc().
* ed: Do not warn about an 'input error' anymore when reading a file that
  lacks the terminating newline.
* ed: Disallow the 'u' command if no change has been made yet after a file
  specified on the command line has been read.
* mail: The Content-Length header field is not used anymore; it is ignored
  when a folder is read, and is omitted when a message is written.
* mail: The LC_CTYPE locale now determines the set of printable characters.
* mail: MIME header fields are no longer generated; the mail command is far
  away from conforming to MIME and should not fake such information.

Release 050628
* The Bourne shell (derived from OpenSolaris code) has been added to the
  Heirloom project as a separate package. It is recommended to install it
  before the new version of the tools, and to adapt 'build/mk.config' such
  that it is used.
* New versions of the 'mail' and 'spell' utilities have been introduced;
  they have been derived from OpenSolaris code.
* The 'bdiff, 'bfs', 'dircmp', 'fmtmsg', 'getopt', and 'mvdir' utilities
  are now available (derived from OpenSolaris code).
* Both Unix lex and flex can now be used for building the tools.
* xargs: The '-l' and '-L' options override previous occurrences of the
  '-i' or '-I' option.
* awk (POSIX version): A command line argument that contains a '=' character
  but starts with a digit is no longer treated as a variable assignment.

Release 050612
* Fixed a double free() call that could occur in multibyte locales with